compiler/driver/tests/snapshots/diagnostics_snapshots__diag_type_error_line_number.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: err
---
error[E002]: undefined variable `y`
  --> diag_type_error_line_number.ny:2:14
   |
  2 |     let x = y
   |              ^
   = label: `y` is not in scope
   |
  3 | }
